<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:weightSum="1"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_photo_string"
            android:layout_margin="5dp"
            android:id="@+id/photoProfile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/picture"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:src="@drawable/image"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_change_button_string"
                android:id="@+id/ChangeButton"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:onClick="changePhotoClicked" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name_string"
            android:layout_margin="5dp"
            android:id="@+id/Nametitle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/NameText"
            android:layout_margin="5dp"
            android:singleLine="true"
            android:hint="@string/profile_name_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_email_string"
            android:layout_margin="5dp"
            android:id="@+id/textView2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_margin="5dp"
            android:hint="@string/profile_email_hint"
            android:singleLine="true"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_phone_string"
            android:layout_margin="5dp"
            android:id="@+id/phonetitle"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:layout_margin="5dp"
            android:inputType="phone"
            android:singleLine="true"
            android:hint="@string/profile_phone_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_gender_string"
            android:layout_margin="5dp"
            android:id="@+id/gendertitle" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gender"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_female_string"
                android:id="@+id/femaleButton"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/profile_male_string"
                android:id="@+id/maleButton"
                android:checked="false" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_class_string"
            android:layout_margin="5dp"
            android:id="@+id/classtitle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/classNumber"
            android:layout_margin="5dp"
            android:hint="@string/profile_class_hint"
            android:singleLine="true"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_major_string"
            android:layout_margin="5dp"
            android:id="@+id/major" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/majorText"
            android:singleLine="true"
            android:hint="@string/profile_major_hint" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_save_button_string"
                android:id="@+id/save"
                android:onClick="onSaveClick"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_cancel_button_string"
                android:id="@+id/cancel"
                android:onClick="onCancelClick"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>